--- a/configs/fastfetch/config.jsonc
+++ b/configs/fastfetch/config.jsonc
@@ -2,8 +2,8 @@
 	"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 	"logo": {
 		"color": {
-			"1": "34",
-			"2": "34"
+			"1": "blue",
+			"2": "blue"
 		},
 		"padding": {
 			"top": 4,
@@ -40,8 +40,13 @@
 			"keyColor": "red"
 		},
 		{
+			"type": "disk",
+			"key": "│ ├󰋊 ",
+			"keyColor": "red"
+		},
+		{
 			"type": "display",
-			"key": "└ └ ",
+			"key": "└ └󰹑 ",
 			"keyColor": "red"
 		},
 		{
@@ -55,57 +60,52 @@
 		{
 			"type": "os",
 			"key": "󰣇 OS ",
-			"keyColor": "green"
+			"keyColor": "blue"
 		},
 		{
 			"type": "kernel",
 			"key": "│ ├ ",
-			"keyColor": "green"
-		},
-		{
-			"type": "host",
-			"key": "│ ├ ",
-			"keyColor": "green"
+			"keyColor": "blue"
 		},
 		{
 			"type": "locale",
 			"key": "│ ├ ",
-			"keyColor": "green"
+			"keyColor": "blue"
 		},
 		{
 			"type": "packages",
-			"key": "│ ├󰏖 ",
-			"keyColor": "green"
+			"key": "└ └󰏖 ",
+			"keyColor": "blue"
 		},
 		{
 			"type": "wm",
-			"key": " WM",
-			"keyColor": "blue"
-		},
-		{
-			"type": "shell",
-			"key": "│ ├ ",
-			"keyColor": "blue"
-		},
-		{
-			"type": "editor",
-			"key": "└ └ ",
-			"keyColor": "blue"
-		},
-		{
-			"type": "lm",
-			"key": "│ ├󰍂 ",
-			"keyColor": "blue"
+			"key": " WM ",
+			"keyColor": "yellow"
 		},
 		{
 			"type": "terminal",
 			"key": "│ ├ ",
-			"keyColor": "blue"
+			"keyColor": "yellow"
 		},
 		{
 			"type": "terminalfont",
-			"key": "└ └ ",
-			"keyColor": "blue"
+			"key": "└ └󰛖 ",
+			"keyColor": "yellow"
+		},
+		{
+			"type": "shell",
+			"key": "󰞷 SH ",
+			"keyColor": "cyan"
+		},
+		{
+			"type": "lm",
+			"key": "│ ├󰍂 ",
+			"keyColor": "cyan"
+		},
+		{
+			"type": "editor",
+			"key": "└ └ ",
+			"keyColor": "cyan"
 		},
 		{
 			"type": "custom",
