--- a/configs/formatters/stylua.toml
+++ b/configs/formatters/stylua.toml
@@ -1,6 +1,6 @@
 indent_type = "Tabs"
 indent_width = 2
 column_width = 120
-collapse_simple_statement = "Never"
+collapse_simple_statement = "FunctionOnly"
 [sort_requires]
 enabled = true
